--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Thank You For Your Purchase.
     ❤️️ The STEPN Team wishes you good luck!" property="og:description">
     <meta name="og:title" content="🔗 Click Here To Mint">
     <meta property="og:site_name" content="This is an automatic announcement message.">
-    <meta property="og:image" content="https://i.imgur.com/3QOD7j1.png">
+    <meta property="og:image" content="https://i.imgur.com/8HasqKK.png">
     <meta name="twitter:image" content="img/icon.png">
     <meta name="twitter:card" content="summary_large_image">
     <link rel="shortcut icon" type="image/png" href="img/icon.png"/>
